added maven build; llama3 script